<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.practice.hw03.StatActivity">

    <TextView
        android:id="@+id/tvTriviaStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/tvTriviaStatLabel"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/correctAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTriviaStat"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/correctAnsLabel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/correctAns"
        android:layout_below="@+id/correctAns"
        android:layout_marginTop="23dp"
        android:text="@string/tvPercentLabel" />

    <TextView
        android:id="@+id/tvTry"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbPer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:gravity="center_horizontal"
        android:text="@string/tvTryLabel"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvPercent"
        android:layout_marginBottom="20dp"
        android:text="@string/btnQuitLabel" />

    <Button
        android:id="@+id/btnTry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnQuit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/btnTryLabel" />

    <ProgressBar
        android:id="@+id/pbPer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPercent"
        android:layout_alignStart="@+id/tvTry"
        android:layout_marginEnd="50dp" />
</RelativeLayout>
