<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.practice.hw03.MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/tvWelcomeLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        app:srcCompat="@android:drawable/screen_background_light" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ivWelcome"
        android:layout_marginBottom="32dp"
        android:text="@string/btnExitLabel" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnExit"
        android:layout_alignBottom="@+id/btnExit"
        android:layout_alignEnd="@+id/ivWelcome"
        android:enabled="false"
        android:text="@string/btnStartLabel" />

    <TextView
        android:id="@+id/tvReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/tvReadyLabel"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvReady"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvReady"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/tvLoadingLabel" />

</RelativeLayout>
